# vitriol

./: .gitignore  .golintci-lint.yml  CONTRIBUTING.md  Cargo.toml  README.md  cog.toml  commitlint.config.js  go.mod  go.work  lefthook.yml  mise.toml  package-lock.json  package.json
.github/workflows/: pages.yml  vitriol-go.yml  vitriol.yml
.github/workflwos/: vitriol.yml
cmd/crucible/: main.go
cmd/lapis/: main.go
crates/lapis/: Cargo.toml
crates/lapis/src/: main.rs
crates/lapis/src/ir/: workflow.rs
docs/: book.toml  index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts  style.css
docs/guide/: index.md  workflow.md
lapis/: go.mod
