[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
enum_glob_use = "deny"
unwrap_used = "warn"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
